--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "extend": "^3.0.2",
     "gulp": "^3.9.1",
     "gulp-sass": "^4.0.2",
+    "ini": "^1.3.5",
     "jsonwebtoken": "^8.3.0",
     "mongodb": "^3.1.9",
     "mongoose": "^5.3.11",
