--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "body-parse": "^0.1.0",
+    "debounce": "^1.2.0",
     "express": "^4.16.4",
     "extend": "^3.0.2",
     "gulp": "^3.9.1",
@@ -20,6 +21,7 @@
     "jsonwebtoken": "^8.3.0",
     "mongodb": "^3.1.9",
     "mongoose": "^5.3.11",
+    "nodemailer": "^4.6.8",
     "nodemon": "^1.18.6",
     "npm-run-all": "^4.1.3",
     "socket.io": "^2.1.1",
