--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "body-parse": "^0.1.0",
     "debounce": "^1.2.0",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "extend": "^3.0.2",
     "gulp": "^3.9.1",
